# deep_euler_tests

./: .gitignore  CMakeLists.txt  LICENSE  README.md  VdP.cpp  data_gen.ipynb  dem_train.py  hyperopt.py  hyperopt_rect.py
Lotka/: CMakeLists.txt  DEM.cpp  data_gen.ipynb  dem_train.py  lotka_figures.ipynb
Lotka/model/: DEM.py  Euler.py  MLPs.py
Lotka/simulations/: lotka_euler_0.1.txt  lotka_euler_1.0.txt
Lotka/utils/: data_utils.py  plot_utils.py
VanDerPol/: CMakeLists.txt  VdP.cpp  data_gen.ipynb  data_gen_more_traj.ipynb  data_gen_phase_space.ipynb  dem_train.py  hyperopt.py  hyperopt_rect.py  vdp_figures.ipynb
VanDerPol/model/: DEM.py  Euler.py  MLPs.py
VanDerPol/simulations/: vdp_euler_0.01.txt  vdp_euler_0.01_43.txt  vdp_euler_0.1.txt  vdp_euler_0.1_43.txt
VanDerPol/utils/: data_utils.py  plot_utils.py  scalers.py
model/: MLPs.py
utils/: data_utils.py  scalers.py
